--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
 .App {
-  text-align: center;
+  background-color: #323437;
+  height: 100vh;
+  overflow: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Dot1 {
+  position: absolute;
+  top: 200px;
+  left: 200px;
+  width: 4px;
+  height: 4px;
+  background-color: black;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Dot2 {
+  position: absolute;
+  top: 400px;
+  left: 100px;
+  width: 4px;
+  height: 4px;
+  background-color: black;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.header {
+  width: 100%;
+  height: 100px;
+  background-color: #212325;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.line-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
